--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "source/js/**/*.js",
     "source/img/**/*.svg",
     "source/sass/**/*.{sass,scss}"
-  ]
+  ],
+  "dependencies": {
+    "hoek": "^5.0.3"
+  }
 }
